--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dev_dependencies:
   test: ^1.16.0
 dependencies:
   archive: ^3.3.5
+  args: ^2.3.2
   console: ^4.1.0
   html: ^0.15.1
   http: ^0.13.5
