--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,7 +17,10 @@ jobs:
    steps:
      - name: Checkout repository
        uses: actions/checkout@v3
-
+     - name: Set up QEMU
+       uses: docker/setup-qemu-action@v2
+     - name: Set up Docker Buildx
+       uses: docker/setup-buildx-action@v2
      - name: Log in to the Container registry
        uses: docker/login-action@v2
        with:
@@ -47,6 +50,10 @@ jobs:
          tags: ${{ steps.meta.outputs.tags }}
          labels: ${{ steps.meta.outputs.labels }}
          github-token: ${{ secrets.GITHUB_TOKEN }}
+         platforms: |
+           linux/amd64
+           linux/arm/v7
+           linux/arm64/v8
      - name: Extract metadata (tags, labels) for Docker
        id: source
        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
@@ -64,5 +71,8 @@ jobs:
          tags: ${{ steps.source.outputs.tags }}
          labels: ${{ steps.source.outputs.labels }}
          github-token: ${{ secrets.GITHUB_TOKEN }}
- 
+         platforms: |
+           linux/amd64
+           linux/arm/v7
+           linux/arm64/v8
 
